--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,11 @@
         <div class="collapse navbar-collapse" id="content">
 
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <% if user_signed_in? && current_user.account%>
+              <li class="nav-item">
+                <%= link_to current_user.username, accounts_path, class: "nav-link" %>
+              </li>
+            <% end %>
             <li class="nav-item"> 
               <a class="nav-link" href="#">some1</a>
             </li>
@@ -66,7 +71,9 @@
     <p class="alert"><%= alert %></p>
 
 
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
