statistic menu base version on main page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,67 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1 class="text-center">Main page</h1>
+
+<h5 class="text-center">params <%= @res %></h5>
+
+<div class="container-fluid mt-3">
+  <div class="row">
+
+    <div class="col-md-3">
+      <!-- Меню сортировки -->
+      <select class="form-select form-select-lg" id="select-order" onchange="selectors()">
+        <option value="" disabled selected>Выберете порядок</option>
+        <option value="order=ASC&">По возрастанию</option>
+        <option value="order=DESC&">По убыванию</option>
+      </select>
+      
+      <select class="form-select form-select-lg mt-2" id="select-result" onchange="selectors()">
+        <option value="" disabled selected>Выберете тип результата</option>
+        <option value="result=games&">Игры</option>
+        <option value="result=wins&">Победы</option>
+        <option value="result=loses&">Поражения</option>
+        <option value="result=draws">Ничьи</option>
+      </select>
+      
+      <div class="d-grid gap-2 mt-2">
+        <a href="/" id="select-link" class="btn btn-secondary">Применить параметры сортировки</a>
+      </div>
+    </div>
+
+    <div class="col-md-8">
+      <!-- Таблица отсортированных данных -->
+      <table class="table table-hover table-bordered">
+        <thead> 
+          <tr class="table-active"> 
+            <th>Имя</th><th>Игры</th><th>Победы</th><th>Поражения</th><th>Ничьи</th>
+          </tr> 
+        </thead>
+        <tbody>
+        <% @accounts.each do |account| %>
+          <tr> 
+            <td><%= account.user.username %></td>
+            <td><%= account.games %></td>
+            <td><%= account.wins %></td>
+            <td><%= account.loses %></td>
+            <td><%= account.draws %></td> 
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+
+  </div>
+</div>
+
+<!-- Функция добавляет параметры в ссылку -->
+<script>
+  function selectors() {
+    var res = "/?"
+
+    var arr = document.getElementsByTagName('select'); 
+    for (var i = 0; i < arr.length; i++){
+      res += arr[i].value;
+    }
+
+    var link = document.getElementById('select-link');
+    link.href = res
+  }
+</script>
